# chess

./: .clang-format  CMakeLists.txt  Dockerfile  README.md  main.cpp
cmake/: utils.cmake
include/: mdspan.hpp
include/chess/: board.h  engine.h
src/: board.cpp  main.cpp
